test/cases/compile_errors/stage1/obj/attempt_to_cast_enum_literal_to_error.zig
export fn entry() void {
    switch (error.Hi) {
        .Hi => {},
    }
}

// error
// backend=stage1
// target=native
//
// tmp.zig:3:9: error: expected type 'error{Hi}', found '@Type(.EnumLiteral)'
